2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/giver-48.png: added correct size

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: debug
	* src/Application.cs: Added wrappers of Avahi isn't running
	* src/Makefile.am, data/images/giver-22.png, data/images/giver-32.png,
	  data/images/giver-24.png, data/images/giver-16.png,
	  data/images/giver-44.png, data/images/Makefile.am,
	  data/images/giver-256.png, data/images/giveroff-24.png: Updated
	  icons from jimmac

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: debug
	* src/ReceivingHandler.cs: changed the encoding and it fixed a problems
	  getting the file name

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Added parameters to get the service from the
	  menu item
	* src/Application.cs: Added handlers to send files (well, test it)
	* src/Makefile.am: Added SendingHandler
	* src/PayloadInfo.cs: Added public property to get name
	* src/SendingHandler.cs: new class for sending files
	* src/ReceivingHandler.cs: debug message
	* giver.mdp: Added SendingHandlerClass

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Removed sample code
	* src/GiverMenuItem.cs: Comment correction
	* src/Application.cs: Updated application to handle incoming
	  connections
	* src/Makefile.am: ADded new files
	* src/PayloadInfo.cs: new class to hold payload info on a transfer
	* src/ReceivingHandler.cs: new class to handle incoming giver requests
	  and handle the transfer
	* giver.mdp: Added new files

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Added TcpListener for transferring files
	* src/Application.cs: Changed the stop order
	* giver.mdp: Added needed references

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Fixed the banter-44 icon to be giver-44
	* src/Application.cs: Fixed up icon so it's off if nobody is there
